--- a/EpicBubbleTheme.theme.css
+++ b/EpicBubbleTheme.theme.css
@@ -18,7 +18,7 @@
     background-color: transparent;
 }
 .theme-dark .layer, .theme-dark .layers {
-    background: transparent;
+    background: rgba(0,0,0,0.18);
 }
 .guilds-wrapper {
     background-color: transparent;
