--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -240,12 +240,11 @@
     background: url(http://2.bp.blogspot.com/-Y0LA7xd221U/Ts0kk5W4FxI/AAAAAAAAA80/-b5BnJzv4WM/s1600/Bowser2+1600x1200.png) -80px -80px/cover !important;
     background-position: -221px !important;
 }
-.member-roles .member-role>.name{color:#FFF;}
-.member-roles .member-role{background-color:currentColor!important;border:4px solid black !important;}
+
 .body-3rkFrF {
     border-bottom: none;
 }
-.headerUsernameNoNickname-1iGxNP,.bodyTitleText-hSiL7d {
+.headerUsernameNoNickname-1iGxNP,.bodyTitle-yehI7c {
     color: white;
 }
 .headerDiscriminator-3fLlCR {
@@ -257,6 +256,37 @@
 .theme-dark .rolesList-2YHFg5 .member-role {
     color: #53B047;
 }
+.role-3rahR_ {
+  padding: 4px 6px;
+  border-radius: 3px;
+  overflow: hidden; 
+  }
+  .role-3rahR_ .roleCircle-3-vPZq {
+    opacity: .5;
+    height: 22px;
+    width: 5px;
+    margin-top: -4px;
+    margin-bottom: -4px;
+    margin-left: -5px;
+    margin-right: -1000px;
+    padding-right: 997px;
+    border-radius: 0; 
+    }
+    /* Secondary Roles */
+    .role-3rahR_[style*="border-color: rgba(185, 187, 190, 0.6)"] .roleCircle-3-vPZq {
+       background: #53B047 !important;
+}
+    .role-3rahR_ .roleCircle-3-vPZq:not(.roleCircleButton-sMOdib) + .roleName-DUQZ9m {
+      margin-left: 0; 
+      }
+  .role-3rahR_ .roleName-DUQZ9m {
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 22px; 
+     color: white !important;
+     position: relative;
+     left: 4px;
+ }
 .headerPlaying-2eYqm9 {
     background: rgb(114, 137, 218);
 }
@@ -273,19 +303,22 @@
     color: white;
 }
 .note textarea:focus {
-    background: rgba(7,6,5, 0.6);
+    background: rgba(7,6,5, 0.6) !important;
     border: 3px solid #53B047;
 }
 .note textarea {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.3) !important;
     color: white;
 }
-.quick-message {
+.theme-dark .quickMessage-28pD5Y {
     background: rgba(7,6,5,0.4);
     border: 3px solid #C43F28;
     border-radius: 1px;
 }
-.quick-message:focus {
+.chat .divider>div {
+    display: none;
+}
+.theme-dark .quickMessage-28pD5Y:focus {
     border: 3px solid #53B047;
     color: white;
 }
@@ -400,15 +433,15 @@
 }
 /* The Discord Settings Stuff */
 .theme-dark .itemDefault-3NDwnY,#bd-settings-sidebar .ui-tab-bar-item {
-    color: white;
+    color: white !important;
 }
-#bd-settings-sidebar .ui-tab-bar-item:hover,.theme-dark .itemDefault-3NDwnY:hover {
-    color: white;
-    background-color: #070605;
+#bd-settings-sidebar .ui-tab-bar-item:hover,.theme-dark .side-2nYO0F .item-3879bf:hover {
+    color: white !important;
+    background-color: #070605 !important;
     border: 4px solid #C43F28;
 }
-#bd-settings-sidebar .ui-tab-bar-item.selected,.itemDefaultSelected-1UAWLe {
-    background-color: #070605;
+#bd-settings-sidebar .ui-tab-bar-item.selected,.side-2nYO0F .itemSelected-3XxAMf {
+    background-color: #070605 !important;
     border: 4px outset #53B047;
     color: white;
 }
