--- a/Mario.theme.css
+++ b/Mario.theme.css
@@ -1,6 +1,5 @@
 //META{"name":"Mario","description":"The Great Mario Theme","author":"DevilsTheAvenged","version":"1.4"}*//{}
 @import url(https://rawgit.com/DevilsLynAvenged/Other-Workspace/master/SomeUnImportantStuff/ThemeFixerv2.theme.css);
-@import url(https://cdn.rawgit.com/DevilsLynAvenged/DevilsLynAvenged/aea3b940/Mario%20Crew/SuperMario.theme.css);
 .app,
 .callout-backdrop,
 .bda-backdrop,
@@ -262,11 +261,10 @@
     background-position: -111px !important;
 }
 .member-roles .member-role>.name{color:#FFF;}
-.member-roles .member-role{background-color:currentColor!important;border:4px solid black !important;}
 .body-3rkFrF {
     border-bottom: none;
 }
-.headerUsernameNoNickname-1iGxNP,.bodyTitleText-hSiL7d {
+.headerUsernameNoNickname-1iGxNP,.bodyTitle-yehI7c {
     color: white;
 }
 .headerDiscriminator-3fLlCR {
@@ -275,6 +273,37 @@
 .headerTagNormal-KyD3_J {
     color: white;
 }
+.role-3rahR_ {
+  padding: 4px 6px;
+  border-radius: 3px;
+  overflow: hidden; 
+  }
+  .role-3rahR_ .roleCircle-3-vPZq {
+    opacity: .5;
+    height: 22px;
+    width: 5px;
+    margin-top: -4px;
+    margin-bottom: -4px;
+    margin-left: -5px;
+    margin-right: -1000px;
+    padding-right: 997px;
+    border-radius: 0; 
+    }
+    /* Secondary Roles */
+    .role-3rahR_[style*="border-color: rgba(185, 187, 190, 0.6)"] .roleCircle-3-vPZq {
+       background: #2E3192 !important;
+}
+    .role-3rahR_ .roleCircle-3-vPZq:not(.roleCircleButton-sMOdib) + .roleName-DUQZ9m {
+      margin-left: 0; 
+      }
+  .role-3rahR_ .roleName-DUQZ9m {
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 22px; 
+     color: white !important;
+     position: relative;
+     left: 4px;
+ }
 .member-roles .member-role {
     color: #2E3192;
 }
@@ -291,19 +320,19 @@
     fill: white;
 }
 .note textarea:focus {
-    background: rgba(46,49,146, 0.6);
+    background: rgba(46,49,146, 0.6) !important;
     border: 3px solid red;
 }
 .note textarea {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.3) !important;
     color: white;
 }
-.quick-message {
+.theme-dark .quickMessage-28pD5Y {
     background: rgba(67,95,171,0.4);
     border: 3px solid #E4BA4B;
     border-radius: 1px;
 }
-.quick-message:focus {
+.theme-dark .quickMessage-28pD5Y:focus {
     border: 3px solid #E4BA4B;
     color: white;
 }
@@ -421,15 +450,18 @@ a {
     color: #E4BA4B;
 }
 .theme-dark .itemDefault-3NDwnY,#bd-settings-sidebar .ui-tab-bar-item {
-    color: white;
+    color: white !important;
 }
 #bd-settings-sidebar .ui-tab-bar-item:hover,.theme-dark .itemDefault-3NDwnY:hover {
     color: white;
-    background-color: #435FAB;
+    background-color: #435FAB !important;
     border: 4px solid #E4BA4B;
 }
-#bd-settings-sidebar .ui-tab-bar-item.selected,.itemDefaultSelected-1UAWLe {
-    background-color: rgba(46,49,146, 1);
+.chat .divider>div {
+    display: none;
+}
+#bd-settings-sidebar .ui-tab-bar-item.selected,.side-2nYO0F .itemSelected-3XxAMf {
+    background-color: rgba(46,49,146, 1) !important;
     border: 4px outset #E4BA4B;
     color: white;
 }
